--- a/profil.html
+++ b/profil.html
@@ -90,12 +90,10 @@
           <h2 id="email"></h2>
         </div>
         <div class="identity">
-          <img src="img/maisons/serpentar.png" alt="house" />
+          <img src="img/maisons/ecussons.png" alt="house" />
         </div>
       </div>
-      <div class="collection" id="list-card">
-        <h2>Possessed Cards:</h2>
-      </div>
+      <div class="collection" id="list-card"></div>
     </main>
 
     <script src="./js/modal.js"></script>
