adding darkmode and css for all

--- a/details.html
+++ b/details.html
@@ -52,7 +52,7 @@
           <a href="login.html">Login</a>
         </li> -->
       </nav>
-      <button class="darkmode">DarkMode</button>
+      <button class="Darkmode">DarkMode</button>
     </header>
 
     <div id="mySidenav" class="sidenav">
@@ -98,10 +98,42 @@
 
       <div id="maisons">
         <!-- boutons pour filtrer par maison -->
-        <button class="maison-btn" data-maison="Gryffindor">Gryffondor</button>
-        <button class="maison-btn" data-maison="Slytherin">Serpentard</button>
-        <button class="maison-btn" data-maison="Ravenclaw">Serdaigle</button>
-        <button class="maison-btn" data-maison="Hufflepuff">Poufsouffle</button>
+        <button class="maison-btn" data-maison="Gryffindor">
+          <img
+            width="30"
+            height="30"
+            src="https://img.icons8.com/color/48/000000/gryffindor.png"
+            alt="gryffindor"
+          />
+          Gryffondor
+        </button>
+        <button class="maison-btn" data-maison="Slytherin">
+          <img
+            width="30"
+            height="30"
+            src="https://img.icons8.com/color/48/000000/slytherin.png"
+            alt="slytherin"
+          />
+          Serpentard
+        </button>
+        <button class="maison-btn" data-maison="Ravenclaw">
+          <img
+            width="30"
+            height="30"
+            src="https://img.icons8.com/color/48/000000/ravenclaw.png"
+            alt="ravenclaw"
+          />
+          Serdaigle
+        </button>
+        <button class="maison-btn" data-maison="Hufflepuff">
+          <img
+            width="30"
+            height="30"
+            src="https://img.icons8.com/color/48/000000/hufflepuff.png"
+            alt="hufflepuff"
+          />
+          Poufsouffle
+        </button>
         <button id="reset">Tout afficher</button>
       </div>
 
@@ -114,5 +146,6 @@
     <script src="./js/filter.js"></script>
     <script src="./js/favorite.js"></script>
     <script src="./js/sidenav.js"></script>
+    <script src="./js/darkmode.js"></script>
   </body>
 </html>
