--- a/index.html
+++ b/index.html
@@ -45,14 +45,8 @@
         <li>
           <a href="profil.html">Profil</a>
         </li>
-        <!-- <li>
-          <a href="register.html">Register</a>
-        </li>
-        <li>
-          <a href="login.html">Login</a>
-        </li> -->
       </nav>
-      <button class="darkmode">DarkMode</button>
+      <button class="Darkmode">DarkMode</button>
     </header>
 
     <div id="mySidenav" class="sidenav">
@@ -115,5 +109,6 @@
     <script src="./js/modal.js"></script>
     <script src="./js/sidenav.js"></script>
     <script src="./js/open_booster.js"></script>
+    <script src="./js/darkmode.js"></script>
   </body>
 </html>
