--- a/card.html
+++ b/card.html
@@ -1,86 +1,92 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
     <button id="open-modal-btn">Trade a card</button>
 
     <div id="modal">
-        <div class="modal-content">
-            <form action="#">
-                <h2>Trade a card with someone</h2>
-                <div class="form">
-                    <div class="reg-name-modal">
-                        <p>Name of the receiver</p>
-                        <input type="text" placeholder="Harry7832">
-                    </div>
-                    <div class="reg-name-modal">
-                        <p>Name of the card</p>
-                        <input type="text" placeholder="Voldemort">
-                    </div>
-                    <div class="reg-psw-modal">
-                        <p>Confirm with your password</p>
-                        <input type="password">
-                    </div>
-                </div>
-                <input type="submit">
-            </form>
-            <button id="close-modal-btn">Close</button>
-        </div>
+      <div class="modal-content">
+        <form action="#">
+          <h2>Trade a <span>card</span> with someone</h2>
+          <div class="form">
+            <div class="reg-name-modal">
+              <p>Email of the receiver</p>
+              <input type="text" placeholder="Harry@gmail.com" />
+            </div>
+            <div class="reg-name-modal">
+              <p>Name of the card</p>
+              <input type="text" placeholder="Voldemort" />
+            </div>
+            <div class="reg-psw-modal">
+              <p>Confirm with your password</p>
+              <input type="password" placeholder=". . . . . . . . . . . ." />
+            </div>
+          </div>
+          <input type="submit" value="Trade" />
+        </form>
+        <button id="close-modal-btn">Close</button>
+      </div>
     </div>
 
     <header>
-        <h2>Harry Potter Cards</h2>
-        <nav>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="details.html">Details</a>
-            </li>
-            <li>
-                <a href="profil.html">Profil</a>
-            </li>
-            <li>
-                <a href="register.html">Register</a>
-            </li>
-            <li>
-                <a href="login.html">Login</a>
-            </li>
-        </nav>
-    </header>
-    
-    <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <h2><span>H</span>arry <span>P</span>otter <span>C</span>ards</h2>
+      <nav>
         <li>
-            <a href="index.html">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
-            <a href="details.html">Details</a>
+          <a href="details.html">Details</a>
         </li>
         <li>
-            <a href="profil.html">Profil</a>
+          <a href="profil.html">Profil</a>
         </li>
-        <li>
+        <!-- <li>
             <a href="register.html">Register</a>
-        </li>
-        <li>
+          </li>
+          <li>
             <a href="login.html">Login</a>
-        </li>
-    </div>
-    <img src="./img/icon/burger.png" onclick="openNav()" alt="menu-burger" id="burger">
+          </li> -->
+      </nav>
+      <button class="Darkmode">DarkMode</button>
+    </header>
 
+    <div id="mySidenav" class="sidenav">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a
+      >
+      <li>
+        <a href="index.html">Home</a>
+      </li>
+      <li>
+        <a href="details.html">Details</a>
+      </li>
+      <li>
+        <a href="profil.html">Profil</a>
+      </li>
+      <li>
+        <a href="register.html">Register</a>
+      </li>
+      <li>
+        <a href="login.html">Login</a>
+      </li>
+    </div>
+    <img
+      src="./img/icon/burger.png"
+      onclick="openNav()"
+      alt="menu-burger"
+      id="burger"
+    />
 
     <main id="card-view"></main>
-
 
     <script src="./js/sidenav.js"></script>
     <script src="./js/single_hp_api.js"></script>
     <script src="./js/modal.js"></script>
-</body>
+    <script src="./js/darkmode.js"></script>
+  </body>
 </html>
