--- a/profil.html
+++ b/profil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profil</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <button id="open-modal-btn">Trade a card</button>
@@ -12,11 +12,11 @@
     <div id="modal">
       <div class="modal-content">
         <form action="#">
-          <h2>Trade a card with someone</h2>
+          <h2>Trade a <span>card</span> with someone</h2>
           <div class="form">
             <div class="reg-name-modal">
-              <p>Name of the receiver</p>
-              <input type="text" placeholder="Harry7832" />
+              <p>Email of the receiver</p>
+              <input type="text" placeholder="Harry@gmail.com" />
             </div>
             <div class="reg-name-modal">
               <p>Name of the card</p>
@@ -24,17 +24,17 @@
             </div>
             <div class="reg-psw-modal">
               <p>Confirm with your password</p>
-              <input type="password" />
+              <input type="password" placeholder=". . . . . . . . . . . ." />
             </div>
           </div>
-          <input type="submit" />
+          <input type="submit" value="Trade" />
         </form>
         <button id="close-modal-btn">Close</button>
       </div>
     </div>
 
     <header>
-      <h2>Harry Potter Cards</h2>
+      <h2><span>H</span>arry <span>P</span>otter <span>C</span>ards</h2>
       <nav>
         <li>
           <a href="index.html">Home</a>
@@ -45,13 +45,14 @@
         <li>
           <a href="profil.html">Profil</a>
         </li>
-        <li>
+        <!-- <li>
           <a href="register.html">Register</a>
         </li>
         <li>
           <a href="login.html">Login</a>
-        </li>
+        </li> -->
       </nav>
+      <button class="Darkmode">DarkMode</button>
     </header>
 
     <div id="mySidenav" class="sidenav">
@@ -82,22 +83,27 @@
         alt="menu-burger"
         id="burger"
       />
-      <div class="user">
-        <div class="pseudo">
+      <div id="profile">
+        <div id="infos">
+          <h2 id="my-profile">My Profile</h2>
           <h2 id="pseudo"></h2>
-        </div>
-        <div class="pseudo">
           <h2 id="email"></h2>
         </div>
-        <div class="identity">
-          <img src="img/maisons/ecussons.png" alt="house" />
+        <img src="img/maisons/ecussons.png" alt="house" />
+        <div id="stats">
+          <!-- <h2>Number of cards</h2>
+          <h2>Favorite house</h2> -->
         </div>
       </div>
+      <!-- <div class="identity">
+        <img src="img/maisons/ecussons.png" alt="house" />
+      </div> -->
       <div class="collection" id="list-card"></div>
     </main>
 
     <script src="./js/modal.js"></script>
     <script src="./js/sidenav.js"></script>
     <script src="./js/profil.js"></script>
+    <script src="./js/darkmode.js"></script>
   </body>
 </html>
