adding css login register

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <section id="open-card">
       <div id="open">
         <h2>Open a <span>booster</span> of 5 cards every 24h !</h2>
-        <button id="booster-btn" type="submit">Tirer au sort</button>
+        <button id="booster-btn" type="submit">Open</button>
       </div>
 
       <div id="booster-cards-container"></div>
