adding css profile side nav login register

--- a/login.html
+++ b/login.html
@@ -25,19 +25,42 @@
       <li>
         <a href="profil.html">Profil</a>
       </li>
-      <li>
-        <a href="register.html">Register</a>
-      </li>
-      <li>
-        <a href="login.html">Login</a>
-      </li>
+      <button class="darkmode">DarkMode</button>
     </div>
-    <img
-      src="./img/icon/burger.png"
+    <svg
       onclick="openNav()"
-      alt="menu-burger"
-      id="burger"
-    />
+      viewBox="0 0 30 30"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+      style="height: 13vh"
+    >
+      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+      <g
+        id="SVGRepo_tracerCarrier"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      ></g>
+      <g id="SVGRepo_iconCarrier">
+        <path
+          d="M4 18H10"
+          stroke="#ffffff"
+          stroke-width="2"
+          stroke-linecap="round"
+        ></path>
+        <path
+          d="M4 12L16 12"
+          stroke="#ffffff"
+          stroke-width="2"
+          stroke-linecap="round"
+        ></path>
+        <path
+          d="M4 6L20 6"
+          stroke="#ffffff"
+          stroke-width="2"
+          stroke-linecap="round"
+        ></path>
+      </g>
+    </svg>
     <main id="register">
       <form method="POST" id="reg-form">
         <h2>Login</h2>
