--- a/profil.html
+++ b/profil.html
@@ -68,21 +68,43 @@
       <li>
         <a href="profil.html">Profil</a>
       </li>
-      <li>
-        <a href="register.html">Register</a>
-      </li>
-      <li>
-        <a href="login.html">Login</a>
-      </li>
+      <button class="darkmode">DarkMode</button>
     </div>
-
+    <svg
+      onclick="openNav()"
+      viewBox="0 0 30 30"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+      style="height: 13vh"
+    >
+      <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+      <g
+        id="SVGRepo_tracerCarrier"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      ></g>
+      <g id="SVGRepo_iconCarrier">
+        <path
+          d="M4 18H10"
+          stroke="#ffffff"
+          stroke-width="2"
+          stroke-linecap="round"
+        ></path>
+        <path
+          d="M4 12L16 12"
+          stroke="#ffffff"
+          stroke-width="2"
+          stroke-linecap="round"
+        ></path>
+        <path
+          d="M4 6L20 6"
+          stroke="#ffffff"
+          stroke-width="2"
+          stroke-linecap="round"
+        ></path>
+      </g>
+    </svg>
     <main id="profil">
-      <img
-        src="./img/icon/burger.png"
-        onclick="openNav()"
-        alt="menu-burger"
-        id="burger"
-      />
       <div id="profile">
         <div id="infos">
           <h2 id="my-profile">My Profile</h2>
