--- a/card.html
+++ b/card.html
@@ -101,6 +101,18 @@
 
     <main id="card-view"></main>
 
+    <footer>
+      <div class="footer-content">
+        <p>Contact me : nathan.boisleux@gmail.com</p>
+        <div class="legal-links">
+          <a href="#">Mentions légales</a>
+          <a href="#">Politique de confidentialité</a>
+          <a href="#">Conditions d'utilisation</a>
+        </div>
+        <p>© 2024 Boisleux Nathan. Tous droits réservés.</p>
+      </div>
+    </footer>
+
     <script src="./js/sidenav.js"></script>
     <script src="./js/single_hp_api.js"></script>
     <script src="./js/modal.js"></script>
