--- a/details.html
+++ b/details.html
@@ -163,6 +163,18 @@
       <ul id="card-list"></ul>
     </main>
 
+    <footer>
+      <div class="footer-content">
+        <p>Contact me : nathan.boisleux@gmail.com</p>
+        <div class="legal-links">
+          <a href="#">Mentions légales</a>
+          <a href="#">Politique de confidentialité</a>
+          <a href="#">Conditions d'utilisation</a>
+        </div>
+        <p>© 2024 Boisleux Nathan. Tous droits réservés.</p>
+      </div>
+    </footer>
+
     <script src="./js/modal.js"></script>
     <script src="./js/hp_api.js"></script>
     <script src="./js/filter.js"></script>
