--- a/index.html
+++ b/index.html
@@ -128,6 +128,18 @@
       <div id="booster-cards-container"></div>
     </section>
 
+    <footer id="home-footer">
+      <div class="footer-content">
+        <p>Contact me : nathan.boisleux@gmail.com</p>
+        <div class="legal-links">
+          <a href="#">Mentions légales</a>
+          <a href="#">Politique de confidentialité</a>
+          <a href="#">Conditions d'utilisation</a>
+        </div>
+        <p>© 2024 Boisleux Nathan. Tous droits réservés.</p>
+      </div>
+    </footer>
+
     <script src="./js/modal.js"></script>
     <script src="./js/sidenav.js"></script>
     <script src="./js/open_booster.js"></script>
