--- a/profil.html
+++ b/profil.html
@@ -111,17 +111,24 @@
           <h2 id="pseudo"></h2>
           <h2 id="email"></h2>
         </div>
+
+        <div id="stats"></div>
         <img src="img/maisons/ecussons.png" alt="house" />
-        <div id="stats">
-          <!-- <h2>Number of cards</h2>
-          <h2>Favorite house</h2> -->
-        </div>
       </div>
-      <!-- <div class="identity">
-        <img src="img/maisons/ecussons.png" alt="house" />
-      </div> -->
       <div class="collection" id="list-card"></div>
     </main>
+
+    <footer>
+      <div class="footer-content">
+        <p>Contact me : nathan.boisleux@gmail.com</p>
+        <div class="legal-links">
+          <a href="#">Mentions légales</a>
+          <a href="#">Politique de confidentialité</a>
+          <a href="#">Conditions d'utilisation</a>
+        </div>
+        <p>© 2024 Boisleux Nathan. Tous droits réservés.</p>
+      </div>
+    </footer>
 
     <script src="./js/modal.js"></script>
     <script src="./js/sidenav.js"></script>
