--- a/register.html
+++ b/register.html
@@ -87,6 +87,18 @@
       </form>
     </main>
 
+    <footer>
+      <div class="footer-content">
+        <p>Contact me : nathan.boisleux@gmail.com</p>
+        <div class="legal-links">
+          <a href="#">Mentions légales</a>
+          <a href="#">Politique de confidentialité</a>
+          <a href="#">Conditions d'utilisation</a>
+        </div>
+        <p>© 2024 Boisleux Nathan. Tous droits réservés.</p>
+      </div>
+    </footer>
+
     <script src="./js/sidenav.js"></script>
     <script src="./js/register.js"></script>
     <script src="./js/darkmode.js"></script>
